# mcp-server-template

./: .dxtignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DXT_ISSUES.md  Makefile  README.md  main.py  manifest.json  pacakge.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml  release.yml
server/: main.py
server/prompts/: templates.py
server/resources/: status.py
server/tools/: __init__.py  greeting.py
tests/: test_server.py
