[project]
name = "mcp-server-template"
version = "0.1.1"
description = "A template for creating Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "ruff>=0.0.292",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "0.1.1"
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "0.1.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
